# CustomDalvik

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/custom/dalvik/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/cpp/dalvik/cutils/: ashmem.h  atomic-arm.h  atomic-inline.h  atomic.h  log.h  open_memstream.cpp  sched_policy.cpp  sockets.cpp
app/src/main/cpp/dalvik/dexdump/: DexDump.cpp
app/src/main/cpp/dalvik/dexlist/: DexList.cpp
app/src/main/cpp/dalvik/dexopt/: OptMain.cpp
app/src/main/cpp/dalvik/vm/: AllocTracker.cpp  AllocTracker.h  Atomic.cpp  Atomic.h  AtomicCache.h  Common.h  Dalvik.h  Globals.h  IndirectRefTable.cpp  IndirectRefTable.h  Jni.cpp  Profile.cpp  Thread.cpp  Thread.h
app/src/main/cpp/dalvik/vm/alloc/: Alloc.cpp  Alloc.h  CardTable.cpp  Copying.cpp  Heap.cpp
app/src/main/cpp/dalvik/vm/analysis/: CodeVerify.cpp  CodeVerify.h  Optimize.cpp  VfyBasicBlock.h
app/src/main/cpp/dalvik/vm/interp/: Interp.cpp
app/src/main/cpp/dalvik/vm/mterp/: InterpC.cpp  Mterp.cpp  YcFile.cpp
app/src/main/cpp/dalvik/vm/native/: dalvik_system_Zygote.cpp
app/src/main/cpp/dalvik/vm/oo/: AccessCheck.cpp  AccessCheck.h  Array.cpp  Class.cpp  Class.h  Resolve.cpp
app/src/main/cpp/dalvik/vm/os/: android.cpp
app/src/main/cpp/dalvik/vm/reflect/: Annotation.cpp  Reflect.cpp
app/src/main/java/com/custom/dalvik/: MainActivity.java
app/src/main/res/values/: strings.xml
app/src/test/java/com/custom/dalvik/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
